# accon

./: CHANGELOG.md  LICENSE.md  README.md
data/: database.sql  tables.sql
docker/fuelphp-accon/: Dockerfile  readme.md  release_note.txt
docker/fuelphp-accon/conf/: default
docker/fuelphp-accon/module/: fuelphp-accon  fuelphp-accon.sh  run.sh
docker/opencv/: Dockerfile  readme.md
docker/opencv/conf/: default
docker/opencv/module/: opencv_make.sh  progress.sh  run.sh
docker/opencv/sample/: test.cpp
docker/opencv/sample/load_image_sample/: CMakeLists.txt  main.cpp  readme.md
docker/opencv/sample/save_image_sample/: CMakeLists.txt  main.cpp  readme.md
docker/taiga/: Dockerfile  readme.md
docker/taiga/conf/: conf.json  default  events-config.json  local.py  taiga-celery.ini  taiga-events.ini  taiga.ini
docker/taiga/module/: progress.sh  run.sh  taiga_setting.sh
docker/ubuntu-nginx-circus-mysql/: Dockerfile  readme.md
docker/ubuntu-nginx-circus-postgresql/: Dockerfile  readme.md
docker/ubuntu-nginx-phpfpm-redis-mysql/: Dockerfile  exsample.md  readme.md  release_note.txt
docker/ubuntu-nginx-python3-circus-mysql/: Dockerfile  LICENSE.txt  readme.md
docker/ubuntu-nginx-python3-jupyter-django-mysql/: Dockerfile  readme.md
fuel/app/: bootstrap.php  crypt.php
fuel/app/config/: accon.php  auth.php  (+6 more)
public/: index.php  test.php
release/: all_release.sh
release/accon/: accon.sh  download.sh  menus.sh  sample.sh  treebooks.sh
release/docker/: fuelphp-accon.sh  taiga.sh  ubuntu-nginx-circus-postgresql.sh  ubuntu-nginx-phpfpm-redis-mysql.sh
(+281 files in other folders)
